Another refactor